; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/extr_malidp_crtc.c_malidp_crtc_enable_vblank.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/extr_malidp_crtc.c_malidp_crtc_enable_vblank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { i32 }
%struct.malidp_drm = type { %struct.malidp_hw_device* }
%struct.malidp_hw_device = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@MALIDP_DE_BLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_crtc*)* @malidp_crtc_enable_vblank to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @malidp_crtc_enable_vblank(%struct.drm_crtc* %0) #0 {
  %2 = alloca %struct.drm_crtc*, align 8
  %3 = alloca %struct.malidp_drm*, align 8
  %4 = alloca %struct.malidp_hw_device*, align 8
  store %struct.drm_crtc* %0, %struct.drm_crtc** %2, align 8
  %5 = load %struct.drm_crtc*, %struct.drm_crtc** %2, align 8
  %6 = call %struct.malidp_drm* @crtc_to_malidp_device(%struct.drm_crtc* %5)
  store %struct.malidp_drm* %6, %struct.malidp_drm** %3, align 8
  %7 = load %struct.malidp_drm*, %struct.malidp_drm** %3, align 8
  %8 = getelementptr inbounds %struct.malidp_drm, %struct.malidp_drm* %7, i32 0, i32 0
  %9 = load %struct.malidp_hw_device*, %struct.malidp_hw_device** %8, align 8
  store %struct.malidp_hw_device* %9, %struct.malidp_hw_device** %4, align 8
  %10 = load %struct.malidp_hw_device*, %struct.malidp_hw_device** %4, align 8
  %11 = load i32, i32* @MALIDP_DE_BLOCK, align 4
  %12 = load %struct.malidp_hw_device*, %struct.malidp_hw_device** %4, align 8
  %13 = getelementptr inbounds %struct.malidp_hw_device, %struct.malidp_hw_device* %12, i32 0, i32 0
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @malidp_hw_enable_irq(%struct.malidp_hw_device* %10, i32 %11, i32 %18)
  ret i32 0
}

declare dso_local %struct.malidp_drm* @crtc_to_malidp_device(%struct.drm_crtc*) #1

declare dso_local i32 @malidp_hw_enable_irq(%struct.malidp_hw_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
